.opsera-hcp-0205-1/k8s/overlays/dev/namespace.yaml
# ════════════════════════════════════════════════════════════════════════════
# NAMESPACE - DEV Environment
# Generated by Code-to-Cloud Enterprise v0.921
# ════════════════════════════════════════════════════════════════════════════
apiVersion: v1
kind: Namespace
metadata:
  name: opsera-hcp-0205-1-dev
  labels:
    app: hcp-0205-1
    environment: dev
    tenant: opsera
